Fix header size on small screens + gitignore

--- a/templates/css/styleTab.css
+++ b/templates/css/styleTab.css
@@ -31,8 +31,8 @@ body {
 }
 .tabs label {
   display: block;
-  padding: 15px 21px;
-  font-size: 20px;
+  padding: 15px 10px;
+  font-size: 15px;
   font-weight: normal;
   text-transform: uppercase;
   background: #ffffff;
@@ -57,7 +57,6 @@ body {
   line-height: 25px;
   position: absolute;
   background-color: #932107;
-  top: 53px;
   left: 0;
 }
 .tabs [id^="tab"]:checked + label {
